<resources>
    <string name="app_name" translatable="false">AutoNote</string>

    <string name="home">Home</string>
    <string name="note">Note</string>
    <string name="calculator">Calculator</string>

    <string name="calculate">Calculate</string>
    <string name="result">Result:</string>
    <string name="fuel">Fuel</string>
    <string name="distance">Distance</string>
    <string name="kilometers_traveled">Kilometers traveled</string>
    <string name="fuel_tanked">Fuel tanked</string>
    <string name="error_field_empty">The field cannot be empty</string>
    <string name="text_for_average_fuel">I will calculate for you the average fuel per 100 kilometers</string>
    <string name="text_for_travel_costs">I will calculate travel costs for you</string>
    <string name="advices_for_driver">Advices for driver</string>
    <string name="average_fuel_burn">Average fuel burn</string>
    <string name="travel_costs">Travel costs</string>
    <string name="fuel_price_liters">Fuel price per liter</string>
    <string name="fuel_price_gallons">Fuel price per gallon</string>
    <string name="currency_hint">USD</string>
    <string name="PH">placeholder</string>
    <string name="PH_TWO">placeholder2</string>



    <string-array name="picks">
        <item>@string/average_fuel_burn</item>
        <item>@string/travel_costs</item>
        <item>placeholder</item>
        <item>placeholder</item>
    </string-array>
    <string name="title_activity_advices">AdvicesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="optional">optional</string>
</resources>