<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Calculator">

<!--    TODO: rozdupcyl sem layout-->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|top|center_vertical"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/app_name"
                android:dropDownWidth="300dp"
                android:gravity="center|top"
                android:minHeight="48dp"
                android:spinnerMode="dialog"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/average_fuel_burn_layout"
                android:layout_width="wrap_content"
                android:layout_height="445dp"
                android:layout_gravity="center">


                <TextView
                    android:id="@+id/resultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="168dp"
                    android:layout_marginEnd="173dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/result"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/result"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="150dp"
                    android:layout_marginBottom="50dp"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editorOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:ems="10"
                    android:hint="@string/distance"
                    android:inputType="numberDecimal"
                    android:minHeight="52dp"
                    android:textColorHint="@color/material_dynamic_neutral50"
                    app:layout_constraintBottom_toTopOf="@+id/num2Str"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editorTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/fuel"
                    android:inputType="numberDecimal"
                    android:minHeight="52dp"
                    android:textColorHint="@color/material_dynamic_neutral50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="167dp" />

                <EditText
                    android:id="@+id/editorThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/fuel"
                    android:inputType="numberDecimal"
                    android:minHeight="52dp"
                    android:textColorHint="@color/material_dynamic_neutral50"
                    app:layout_constraintBottom_toTopOf="@+id/resultTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editorTwo" />

                <TextView
                    android:id="@+id/num1Str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/kilometers_traveled"
                    app:layout_constraintBottom_toTopOf="@+id/editorOne"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/num2Str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/fuel_tanked"
                    app:layout_constraintBottom_toTopOf="@+id/editorTwo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5sp"
                    android:text="@string/text_for_average_fuel"
                    app:layout_constraintBottom_toTopOf="@+id/num1Str"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.48"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/calculate"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/calculate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/result" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

    </TableLayout>

</FrameLayout>